agregando archivos html y creando barra y navegacion

--- a/index.html
+++ b/index.html
@@ -12,5 +12,23 @@
 </head>
 <body>
     
+    <header class="py-5 header">
+        <div class="container-xl">
+            <div class="row justify-content-center justify-content-md-between">
+                <div class="col-md-3">
+                    <a href="index.html">
+                        <img src="build/img/logo.svg" alt="imagen logo" class="img-fluid">
+                    </a>
+                </div>
+
+                <div class="col-md-6 d-flex flex-column align-items-center mt-5 mt-md-0 flex-md-row justify-content-md-end">
+                    <a href="index.html" class="d-block px-2 py-1 text-decoration-none fs-6 fw-bold text-uppercase">Inicio</a>
+                    <a href="nosotros.html" class="d-block px-2 py-1 text-decoration-none fs-6 fw-bold text-uppercase">Nosotros</a>
+                    <a href="blog.html" class="d-block px-2 py-1 text-decoration-none fs-6 fw-bold text-uppercase">Blog</a>
+                    <a href="tienda.html" class="d-block px-2 py-1 text-decoration-none fs-6 fw-bold text-uppercase">Tienda</a>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
