--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
                     </a>
                 </div>
 
-                <nav class="col-md-6 d-flex flex-column align-items-center mt-5 mt-md-0 flex-md-row justify-content-md-end">
-                    <a href="index.html" class="d-block px-2 py-1 text-decoration-none fs-6 fw-bold text-uppercase">Inicio</a>
-                    <a href="nosotros.html" class="d-block px-2 py-1 text-decoration-none fs-6 fw-bold text-uppercase">Nosotros</a>
-                    <a href="blog.html" class="d-block px-2 py-1 text-decoration-none fs-6 fw-bold text-uppercase">Blog</a>
-                    <a href="tienda.html" class="d-block px-2 py-1 text-decoration-none fs-6 fw-bold text-uppercase">Tienda</a>
+                <nav class="col-md-6 d-flex flex-column align-items-center mt-5 mt-md-0 flex-md-row justify-content-md-end navegacion">
+                    <a href="index.html" class="d-block px-2 py-1 fs-6 fw-bold text-uppercase">Inicio</a>
+                    <a href="nosotros.html" class="d-block px-2 py-1 fs-6 fw-bold text-uppercase">Nosotros</a>
+                    <a href="blog.html" class="d-block px-2 py-1 fs-6 fw-bold text-uppercase">Blog</a>
+                    <a href="tienda.html" class="d-block px-2 py-1 fs-6 fw-bold text-uppercase">Tienda</a>
                 </nav>
             </div><!--.row-->
 
             <div class="row mt-5">
-                <div class="col-md-6 text-center text-md-start">
-                    <h1 class="display-2 fw-bold">Modelo vai</h1>
+                <div class="col-md-6 text-center text-md-start pt-5">
+                    <h1 class="display-2 fw-bold">Modelo VAI</h1>
                     <p class="mt-5 fs-5 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, possimus quibusdam dolor nemo velit quo, fuga omnis, iure molestias optio tempore sint at ipsa dolorum odio exercitationem eos inventore odit.</p>
                     <p class="text-primary fs-1 fw-black">$399</p>
                     <a href="producto.html" class="btn fs-4 bg-primary text-white py-2 px-5">Ver producto</a>
