posicionando la guitarra en el header

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                 </div>
             </div>
         </div>
+
+        <img src="build/img/header_guitarra.png" alt="iamgen guitarra" class="header-guitarra">
     </header>
 </body>
 </html>
