agregando los productos

--- a/index.html
+++ b/index.html
@@ -41,5 +41,155 @@
 
         <img src="build/img/header_guitarra.png" alt="iamgen guitarra" class="header-guitarra">
     </header>
+
+    <main class="container-xl mt-5">
+        <h2 class="text-center">Nuestra Colección</h2>
+
+        <div class="row mt-5">
+            <div class="col-md-6 col-lg-4 my-4 row">
+                <div class="col-4">
+                    <img src="build/img/guitarra_01.jpg" alt="imagen guitarra" class="img-fluid">
+                </div>
+                <div class="col-8">
+                    <h3 class="text-black fs-4 fw-bold text-uppercase">lukather</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit quae labore odit magnam in autem nesciunt, amet deserunt</p>
+                    <p class="fw-black text-primary fs-3">$299</p>
+                    <a href="producto.html" class="bg-black d-block text-center p-2 text-uppercase fw-black">Ver producto</a>
+                </div>
+            </div><!--Fin guitarra -->
+
+            <div class="col-md-6 col-lg-4 my-4 row">
+                <div class="col-4">
+                    <img src="build/img/guitarra_02.jpg" alt="imagen guitarra" class="img-fluid">
+                </div>
+                <div class="col-8">
+                    <h3 class="text-black fs-4 fw-bold text-uppercase">srv</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit quae labore odit magnam in autem nesciunt, amet deserunt</p>
+                    <p class="fw-black text-primary fs-3">$299</p>
+                    <a href="producto.html" class="bg-black d-block text-center p-2 text-uppercase fw-black">Ver producto</a>
+                </div>
+            </div><!--Fin guitarra -->
+
+            <div class="col-md-6 col-lg-4 my-4 row">
+                <div class="col-4">
+                    <img src="build/img/guitarra_03.jpg" alt="imagen guitarra" class="img-fluid">
+                </div>
+                <div class="col-8">
+                    <h3 class="text-black fs-4 fw-bold text-uppercase">borland</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit quae labore odit magnam in autem nesciunt, amet deserunt</p>
+                    <p class="fw-black text-primary fs-3">$299</p>
+                    <a href="producto.html" class="bg-black d-block text-center p-2 text-uppercase fw-black">Ver producto</a>
+                </div>
+            </div><!--Fin guitarra -->
+
+            <div class="col-md-6 col-lg-4 my-4 row">
+                <div class="col-4">
+                    <img src="build/img/guitarra_04.jpg" alt="imagen guitarra" class="img-fluid">
+                </div>
+                <div class="col-8">
+                    <h3 class="text-black fs-4 fw-bold text-uppercase">vai</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit quae labore odit magnam in autem nesciunt, amet deserunt</p>
+                    <p class="fw-black text-primary fs-3">$299</p>
+                    <a href="producto.html" class="bg-black d-block text-center p-2 text-uppercase fw-black">Ver producto</a>
+                </div>
+            </div><!--Fin guitarra -->
+
+            <div class="col-md-6 col-lg-4 my-4 row">
+                <div class="col-4">
+                    <img src="build/img/guitarra_05.jpg" alt="imagen guitarra" class="img-fluid">
+                </div>
+                <div class="col-8">
+                    <h3 class="text-black fs-4 fw-bold text-uppercase">thompson</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit quae labore odit magnam in autem nesciunt, amet deserunt</p>
+                    <p class="fw-black text-primary fs-3">$299</p>
+                    <a href="producto.html" class="bg-black d-block text-center p-2 text-uppercase fw-black">Ver producto</a>
+                </div>
+            </div><!--Fin guitarra -->
+
+            <div class="col-md-6 col-lg-4 my-4 row">
+                <div class="col-4">
+                    <img src="build/img/guitarra_06.jpg" alt="imagen guitarra" class="img-fluid">
+                </div>
+                <div class="col-8">
+                    <h3 class="text-black fs-4 fw-bold text-uppercase">white</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit quae labore odit magnam in autem nesciunt, amet deserunt</p>
+                    <p class="fw-black text-primary fs-3">$299</p>
+                    <a href="producto.html" class="bg-black d-block text-center p-2 text-uppercase fw-black">Ver producto</a>
+                </div>
+            </div><!--Fin guitarra -->
+
+            <div class="col-md-6 col-lg-4 my-4 row">
+                <div class="col-4">
+                    <img src="build/img/guitarra_07.jpg" alt="imagen guitarra" class="img-fluid">
+                </div>
+                <div class="col-8">
+                    <h3 class="text-black fs-4 fw-bold text-uppercase">cobain</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit quae labore odit magnam in autem nesciunt, amet deserunt</p>
+                    <p class="fw-black text-primary fs-3">$299</p>
+                    <a href="producto.html" class="bg-black d-block text-center p-2 text-uppercase fw-black">Ver producto</a>
+                </div>
+            </div><!--Fin guitarra -->
+
+            <div class="col-md-6 col-lg-4 my-4 row">
+                <div class="col-4">
+                    <img src="build/img/guitarra_08.jpg" alt="imagen guitarra" class="img-fluid">
+                </div>
+                <div class="col-8">
+                    <h3 class="text-black fs-4 fw-bold text-uppercase">dale</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit quae labore odit magnam in autem nesciunt, amet deserunt</p>
+                    <p class="fw-black text-primary fs-3">$299</p>
+                    <a href="producto.html" class="bg-black d-block text-center p-2 text-uppercase fw-black">Ver producto</a>
+                </div>
+            </div><!--Fin guitarra -->
+
+            <div class="col-md-6 col-lg-4 my-4 row">
+                <div class="col-4">
+                    <img src="build/img/guitarra_09.jpg" alt="imagen guitarra" class="img-fluid">
+                </div>
+                <div class="col-8">
+                    <h3 class="text-black fs-4 fw-bold text-uppercase">krieger</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit quae labore odit magnam in autem nesciunt, amet deserunt</p>
+                    <p class="fw-black text-primary fs-3">$299</p>
+                    <a href="producto.html" class="bg-black d-block text-center p-2 text-uppercase fw-black">Ver producto</a>
+                </div>
+            </div><!--Fin guitarra -->
+
+            <div class="col-md-6 col-lg-4 my-4 row">
+                <div class="col-4">
+                    <img src="build/img/guitarra_10.jpg" alt="imagen guitarra" class="img-fluid">
+                </div>
+                <div class="col-8">
+                    <h3 class="text-black fs-4 fw-bold text-uppercase">campbell</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit quae labore odit magnam in autem nesciunt, amet deserunt</p>
+                    <p class="fw-black text-primary fs-3">$299</p>
+                    <a href="producto.html" class="bg-black d-block text-center p-2 text-uppercase fw-black">Ver producto</a>
+                </div>
+            </div><!--Fin guitarra -->
+
+            <div class="col-md-6 col-lg-4 my-4 row">
+                <div class="col-4">
+                    <img src="build/img/guitarra_11.jpg" alt="imagen guitarra" class="img-fluid">
+                </div>
+                <div class="col-8">
+                    <h3 class="text-black fs-4 fw-bold text-uppercase">reed</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit quae labore odit magnam in autem nesciunt, amet deserunt</p>
+                    <p class="fw-black text-primary fs-3">$299</p>
+                    <a href="producto.html" class="bg-black d-block text-center p-2 text-uppercase fw-black">Ver producto</a>
+                </div>
+            </div><!--Fin guitarra -->
+
+            <div class="col-md-6 col-lg-4 my-4 row">
+                <div class="col-4">
+                    <img src="build/img/guitarra_12.jpg" alt="imagen guitarra" class="img-fluid">
+                </div>
+                <div class="col-8">
+                    <h3 class="text-black fs-4 fw-bold text-uppercase">hazel</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit quae labore odit magnam in autem nesciunt, amet deserunt</p>
+                    <p class="fw-black text-primary fs-3">$299</p>
+                    <a href="producto.html" class="bg-black d-block text-center p-2 text-uppercase fw-black">Ver producto</a>
+                </div>
+            </div><!--Fin guitarra -->
+        </div>
+    </main>
 </body>
 </html>
