--- a/index.html
+++ b/index.html
@@ -191,5 +191,18 @@
             </div><!--Fin guitarra -->
         </div>
     </main>
+
+    <section class="cursos">
+        <div class="container-xl">
+            <div class="row justify-content-md-end">
+                <div class="col-md-6 text-center">
+                    <h3>Aprende a tocar guitarra</h3>
+                    <p class="text-white mt-3 fs-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, accusantium harum incidunt suscipit a itaque, consectetur, id molestiae adipisci et obcaecati tempore iste ea nisi corrupti illo asperiores repudiandae odit!</p>
+
+                    <a href="#" class="text-uppercase bg-primary text-white py-2 px-5 mt-2 fw-black">Más información</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
