--- a/index.html
+++ b/index.html
@@ -204,5 +204,64 @@
             </div>
         </div>
     </section>
+
+    <section class="container-xl mt-5">
+        <h2 class="text-center">Nuestro Blog</h2>
+
+        <div class="row mt-5">
+            <div class="col-md-6 col-lg-3 mb-4">
+                <div class="card">
+                    <img src="build/img/blog_1.jpg" alt="imagen blog" class="card-img-top">
+
+                    <div class="card-body">
+                        <h3 class="text-black fw-normal fs-4">Como elegir tu primer guitarra</h3>
+                        <p class="text-primary">06 de Diciembre de 2023</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere quibusdam, nesciunt dolores iure minima molestias voluptas adipisci.</p>
+                        <a class="btn btn-primary d-block text-white text-uppercase fs-6 mt-4" href="entrada.html">Leer entrada</a>
+                    </div>
+                </div>
+            </div><!-- col-md-6 -->
+
+            <div class="col-md-6 col-lg-3 mb-4">
+                <div class="card">
+                    <img src="build/img/blog_2.jpg" alt="imagen blog" class="card-img-top">
+
+                    <div class="card-body">
+                        <h3 class="text-black fw-normal fs-4">Como elegir tu primer guitarra</h3>
+                        <p class="text-primary">06 de Diciembre de 2023</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere quibusdam, nesciunt dolores iure minima molestias voluptas adipisci.</p>
+                        <a class="btn btn-primary d-block text-white text-uppercase fs-6 mt-4" href="entrada.html">Leer entrada</a>
+                    </div>
+                </div>
+            </div><!-- col-md-6 -->
+
+            <div class="col-md-6 col-lg-3 mb-4">
+                <div class="card">
+                    <img src="build/img/blog_3.jpg" alt="imagen blog" class="card-img-top">
+
+                    <div class="card-body">
+                        <h3 class="text-black fw-normal fs-4">Como elegir tu primer guitarra</h3>
+                        <p class="text-primary">06 de Diciembre de 2023</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere quibusdam, nesciunt dolores iure minima molestias voluptas adipisci.</p>
+                        <a class="btn btn-primary d-block text-white text-uppercase fs-6 mt-4" href="entrada.html">Leer entrada</a>
+                    </div>
+                </div>
+            </div><!-- col-md-6 -->
+
+            <div class="col-md-6 col-lg-3 mb-4">
+                <div class="card">
+                    <img src="build/img/blog_4.jpg" alt="imagen blog" class="card-img-top">
+
+                    <div class="card-body">
+                        <h3 class="text-black fw-normal fs-4">Como elegir tu primer guitarra</h3>
+                        <p class="text-primary">06 de Diciembre de 2023</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere quibusdam, nesciunt dolores iure minima molestias voluptas adipisci.</p>
+                        <a class="btn btn-primary d-block text-white text-uppercase fs-6 mt-4" href="entrada.html">Leer entrada</a>
+                    </div>
+                </div>
+            </div><!-- col-md-6 -->
+
+        </div>
+    </section>
 </body>
 </html>
