--- a/index.html
+++ b/index.html
@@ -260,8 +260,20 @@
                     </div>
                 </div>
             </div><!-- col-md-6 -->
-
         </div>
     </section>
+
+    <footer class="bg-dark mt-5 py-5">
+        <div class="container-xl d-md-flex justify-content-md-between">
+            <nav class="d-flex flex-column flex-md-row align-items-center">
+                <a class="text-white fs-4 me-md-2" href="index.html">Inicio</a>
+                <a class="text-white fs-4 me-md-2" href="nosotros.html">Nosotros</a>
+                <a class="text-white fs-4 me-md-2" href="blog.html">Blog</a>
+                <a class="text-white fs-4 me-md-2" href="tienda.html">Tienda</a>
+            </nav>
+
+            <p class="text-white text-center fs-4 mt-4 mt-md-0">©GuitarLA, todos los derechos reservados</p>
+        </div>
+    </footer>
 </body>
 </html>
