creando tienda y producto, y finalizando el proyecto por el momento

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;900&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="build/css/app.css">
+    <link rel="stylesheet" href="build/css/app.min.css">
 </head>
 <body>
     
@@ -46,7 +46,7 @@
         <h2 class="text-center">Nuestra Colección</h2>
 
         <div class="row mt-5">
-            <div class="col-md-6 col-lg-4 my-4 row">
+            <div class="col-md-6 col-lg-4 my-4 row align-items-center">
                 <div class="col-4">
                     <img src="build/img/guitarra_01.jpg" alt="imagen guitarra" class="img-fluid">
                 </div>
@@ -58,7 +58,7 @@
                 </div>
             </div><!--Fin guitarra -->
 
-            <div class="col-md-6 col-lg-4 my-4 row">
+            <div class="col-md-6 col-lg-4 my-4 row align-items-center">
                 <div class="col-4">
                     <img src="build/img/guitarra_02.jpg" alt="imagen guitarra" class="img-fluid">
                 </div>
@@ -70,7 +70,7 @@
                 </div>
             </div><!--Fin guitarra -->
 
-            <div class="col-md-6 col-lg-4 my-4 row">
+            <div class="col-md-6 col-lg-4 my-4 row align-items-center">
                 <div class="col-4">
                     <img src="build/img/guitarra_03.jpg" alt="imagen guitarra" class="img-fluid">
                 </div>
@@ -82,7 +82,7 @@
                 </div>
             </div><!--Fin guitarra -->
 
-            <div class="col-md-6 col-lg-4 my-4 row">
+            <div class="col-md-6 col-lg-4 my-4 row align-items-center">
                 <div class="col-4">
                     <img src="build/img/guitarra_04.jpg" alt="imagen guitarra" class="img-fluid">
                 </div>
@@ -94,7 +94,7 @@
                 </div>
             </div><!--Fin guitarra -->
 
-            <div class="col-md-6 col-lg-4 my-4 row">
+            <div class="col-md-6 col-lg-4 my-4 row align-items-center">
                 <div class="col-4">
                     <img src="build/img/guitarra_05.jpg" alt="imagen guitarra" class="img-fluid">
                 </div>
@@ -106,7 +106,7 @@
                 </div>
             </div><!--Fin guitarra -->
 
-            <div class="col-md-6 col-lg-4 my-4 row">
+            <div class="col-md-6 col-lg-4 my-4 row align-items-center">
                 <div class="col-4">
                     <img src="build/img/guitarra_06.jpg" alt="imagen guitarra" class="img-fluid">
                 </div>
@@ -118,7 +118,7 @@
                 </div>
             </div><!--Fin guitarra -->
 
-            <div class="col-md-6 col-lg-4 my-4 row">
+            <div class="col-md-6 col-lg-4 my-4 row align-items-center">
                 <div class="col-4">
                     <img src="build/img/guitarra_07.jpg" alt="imagen guitarra" class="img-fluid">
                 </div>
@@ -130,7 +130,7 @@
                 </div>
             </div><!--Fin guitarra -->
 
-            <div class="col-md-6 col-lg-4 my-4 row">
+            <div class="col-md-6 col-lg-4 my-4 row align-items-center">
                 <div class="col-4">
                     <img src="build/img/guitarra_08.jpg" alt="imagen guitarra" class="img-fluid">
                 </div>
@@ -142,7 +142,7 @@
                 </div>
             </div><!--Fin guitarra -->
 
-            <div class="col-md-6 col-lg-4 my-4 row">
+            <div class="col-md-6 col-lg-4 my-4 row align-items-center">
                 <div class="col-4">
                     <img src="build/img/guitarra_09.jpg" alt="imagen guitarra" class="img-fluid">
                 </div>
@@ -154,7 +154,7 @@
                 </div>
             </div><!--Fin guitarra -->
 
-            <div class="col-md-6 col-lg-4 my-4 row">
+            <div class="col-md-6 col-lg-4 my-4 row align-items-center">
                 <div class="col-4">
                     <img src="build/img/guitarra_10.jpg" alt="imagen guitarra" class="img-fluid">
                 </div>
@@ -166,7 +166,7 @@
                 </div>
             </div><!--Fin guitarra -->
 
-            <div class="col-md-6 col-lg-4 my-4 row">
+            <div class="col-md-6 col-lg-4 my-4 row align-items-center">
                 <div class="col-4">
                     <img src="build/img/guitarra_11.jpg" alt="imagen guitarra" class="img-fluid">
                 </div>
@@ -178,7 +178,7 @@
                 </div>
             </div><!--Fin guitarra -->
 
-            <div class="col-md-6 col-lg-4 my-4 row">
+            <div class="col-md-6 col-lg-4 my-4 row align-items-center">
                 <div class="col-4">
                     <img src="build/img/guitarra_12.jpg" alt="imagen guitarra" class="img-fluid">
                 </div>
