--- a/producto.html
+++ b/producto.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;900&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="build/css/app.min.css">
+    <link rel="stylesheet" href="build/css/app.css">
 </head>
 <body>
     
@@ -32,15 +32,38 @@
     </header>
 
     <main class="container-xl mt-5">
-        <h2 class="text-center">Nosotros</h2>
-        <div class="row mt-5 align-items-center">
-            <div class="col-md-6">
-                <img class="img-fluid" src="build/img/nosotros.jpg" alt="iamgen nosootros">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-4 col-md-2">
+                <img src="build/img/guitarra_12.jpg" alt="imagen guitarra" class="img-fluid">
             </div>
+            <div class="col-8 col-md-4">
+                <h3 class="text-black fs-4 fw-bold text-uppercase">hazel</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit quae labore odit magnam in autem nesciunt, amet deserunt</p>
+                <p class="fw-black text-primary fs-3">$299</p>
 
-            <div class="col-md-6 mt-5 mt-md-0">
-                <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptatem corporis ipsa, eaque possimus, quasi, itaque nobis officiis dolorum optio. Non est quis illum optio at a, iste ut?</p>
-                <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ut voluptatem corporis ipsa, eaque possimus, quasi, itaque nobis officiis dolorum optio. Non est quis illum optio at a, iste ut?</p>
+                <form class="row">
+                    <div class="col-12">
+                        <div class="form-group">
+                            <label class="form-label">Cantidad:</label>
+                            <select class="form-control">
+                                <option value="">-- Seleccione --</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">10</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="col-12 d-grid">
+                        <input type="submit" value="Agregar al carrito" class="btn btn-primary text-white text-uppercase fs-6 mt-4">
+                    </div>
+                </form>
             </div>
         </div>
     </main>
